<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_readQR" />
        <item android:id="@+id/nav_problema" android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_problema" />
        <item android:id="@+id/nav_alimento" android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_alimento" />
        <item android:id="@+id/nav_empaque" android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_empaque" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_configuraciom" />
    </group>

    <item android:title="@string/nav_otros">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_compartir_medicion" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_enviar_medicion" />
        </menu>
    </item>

</menu>